Fix nav social icon sizing on certain screen sizes to not wrap to new line.

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -137,9 +137,9 @@ nav ul li {
 }
 
 nav img {
-	height: 4vmin;
+	height: 3.9vmin;
 	opacity: 0.3;
-	width: 4vmin;
+	width: 3.9vmin;
 }
 
 nav img:hover {
